js: support WeakReference